--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,13 @@ body {
   font: var(--font_size) var(--font_family);
   font-weight: 400;
   line-height: 1.5;
-  background: var(--background_color) var(--background_image) no-repeat center;
+  background: url('../img/wallpaper.jpg') no-repeat center center fixed;
+  background-size: cover;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
